--- a/PaymentFE/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
+++ b/PaymentFE/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
@@ -1,1 +1,30 @@
-<p>payment-detail-form works!</p>
+<form #form="ngForm" (submit)="onSubmit(form)">
+  <input type="hidden" [value]="service.formData.paymentDetailId" name="paymentDetailId" />
+  <div class="mb-3">
+    <label>Card Owner Name</label>
+    <input class="form-control form-control-lg" placeholder="Name On Card" #cardOwnerName="ngModel"
+      [(ngModel)]="service.formData.cardOwnerName" name="cardOwnerName" />
+  </div>
+  <div class="mb-3">
+    <label>Card Number</label>
+    <input class="form-control form-control-lg" placeholder="16 Digit Card Number" #cardNumber="ngModel"
+      [(ngModel)]="service.formData.cardNumber" name="cardNumber" maxlength="16" />
+  </div>
+  <div class="row">
+    <div class="mb-3 col-6">
+      <label>Security Code</label>
+      <input class="form-control form-control-lg" placeholder="CVV" type='password' #securityCode="ngModel"
+        [(ngModel)]="service.formData.securityCode" name="securityCode" maxlength="3" />
+    </div>
+    <div class="mb-3 col-6">
+      <label>Valid Through</label>
+      <input class="form-control form-control-lg" placeholder="MM/YY" #expirationDate="ngModel"
+        [(ngModel)]="service.formData.expirationDate" name="expirationDate" />
+    </div>
+  </div>
+  <div class="d-grid">
+    <button type="submit" class="btn btn-lg btn-success">
+      Submit
+    </button>
+  </div>
+</form>
