--- a/PaymentFE/src/app/payment-details/payment-details.component.html
+++ b/PaymentFE/src/app/payment-details/payment-details.component.html
@@ -11,13 +11,13 @@
     <ul class="list-group">
       <li class="list-group-item d-flex justify-content-between align-items-start mb-2 border px-4 py-3 rounded-3"
         *ngFor="let pd of service.list">
-        <div class="flex-grow-1 mouse-hover">
+        <div class="flex-grow-1 mouse-hover" (click)="populateForm(pd)">
           <div class="fw-bold">{{pd.cardOwnerName}}</div>
           <div>{{pd.cardNumber}}</div>
           <div class="fw-bold">{{pd.expirationDate}}</div>
         </div>
         <span class="text-secondary">
-          <i class="fa-solid fa-trash mouse-hover fa-lg"></i>
+          <i class="fa-solid fa-trash mouse-hover fa-lg" (click)="onDelete(pd.paymentDetailID)"></i>
         </span>
       </li>
     </ul>
